Working on the nav-bar

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,31 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="scssAndJs/scss/style.css">
         <title>Index</title>
     </head>
     <body>
-        <h1>Change</h1>
+        <header class="header">
+            <nav class="flex flex-jc-sb flex-ai-c">
+                <h1 class = "header__logo">CSCB532</h1>
+
+                <a href="#" class = "header__menu hide-for-desktop" >
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
+
+                <div class="header__links hide-for-mobile">
+                    <a href="#">Home</a>
+                    <a href="#">About us</a>
+                    <a href="#">Delivery</a>
+                </div>
+
+                <button type ="button ">Sign up / Log in</button>
+            </nav>
+        </header>
+
+
+        <script src = "scssAndJs/js/script.js"></script>
     </body>
 </html>
