--- a/app/templates/scssAndJs/scss/_header.scss
+++ b/app/templates/scssAndJs/scss/_header.scss
@@ -1,34 +1,129 @@
 .header{
     
     background: $white;
-    nav{
-        padding: 17px 24px;
-       
-    }
 
+    &.open{
+
+        
+
+        .header__toggle{
+
+            >span:first-child{
+            transform: rotate(45deg);
+            }
+            >span:nth-child(2){
+            opacity: 0;
+            }
+            >span:last-child{
+            transform: rotate(-45deg);
+            }
+        }
+   }
+
+   nav{
+       position:relative;
+       background-color: $white;
+       padding-top: 1.0625rem;
+       padding-bottom: 1.0625rem;
+   }
+
+   .overlay{
+       opacity: 0;
+       position: fixed;
+       top: 0;
+       right: 0;
+       bottom: 0;
+       left: 0;
+       background-image: linear-gradient($darkBlue, transparent);
+   }
+   
+   
     &__logo{
         color: $darkBlue;
     }
 
-    &__menu{ //mobile menu
+    &__toggle{ //mobile menu toggle
         > span{
             display: block;
             width:26px;
             height:2px;
-            background-color:$brightCyan;
+            background-color:$darkBlue;
+            transition: all 300ms ease-in-out;
+            transform-origin: 3px 2px;
+            padding-bottom: 4px;
 
             &:not(:last-child){
                 margin-bottom: 3px;
             }
         }
+
+        
     }
 
     &__links{
         a{
+            position: relative;
             font-size: $font-sm;
+            color:$grayishBlue;
+            transition: opacity 300ms ease-in-out;
+
             &:not(:last-child){
                 margin-right:32px;
             }
+
+
+            &::before{
+                content: "";
+                display: block;
+                position: absolute;
+                height: 5px;
+                left: 0;
+                right: 0;
+                bottom: -30px;
+                background: linear-gradient(to right,$limeGreen,$brightCyan);
+                opacity: 0;
+                transition: opacity 300ms ease-in-out;
+            }
+
+            &:hover{
+                color: $darkBlue;
+                &::before{
+                    opacity: 1;
+                }
+            }
         }
+    }
+
+    &__sinlogout{
+        font-size: 1rem;
+        color: $white;
+        padding: 6px;
+        transition: opacity 300ms ease-in-out;
+
+        &:hover{
+            opacity: 0.75;
+        }
+   
+    }
+
+    &__menu{
+        position: absolute;
+        width: calc(100% - 3rem);
+        left: 50%;
+        transform: translateX(-50%);
+        background: $white;
+        text-align: center;
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+        margin-top: 1.5rem;
+        border-radius: 5px;
+        
+        .pages{
+            color: $darkBlue;
+            display: block;
+            margin-top: 10px;
+            }
+            
+        
     }
 }
