Working on the body of the web

--- a/app/templates/scssAndJs/scss/_globals.scss
+++ b/app/templates/scssAndJs/scss/_globals.scss
@@ -20,7 +20,7 @@ a, a:visited, a:hover{
 
 //Buttons
 button, .button{
-    padding: 1rem 2.1875;
+    padding: 6px;
     border-radius: 50px;
     background: linear-gradient(to right,$limeGreen,$brightCyan);
     color: $white;
