Working on the body

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,7 +46,7 @@
                 <h2>New generation of trading, 
                     transporting and selling your belongings!</h2>
                     <p>Make your first shipment on us.</p>
-                    <a href="#" class ="button">SHIPMENT</a>
+                    <a href="#" class ="button">Shipment</a>
             </div>
         </section>
 
