--- a/app/templates/scssAndJs/scss/_hero.scss
+++ b/app/templates/scssAndJs/scss/_hero.scss
@@ -1,14 +1,26 @@
  .hero{   
     &__image{
+        position: relative;
         background-image: url('/app/templates/images/—Pngtree—delivery\ service\ with\ maps\ on_5367224.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
-        min-height: 10rem;
+        min-height: 15rem;
+
     }
 
     &__text{
-        
+        text-align: center;
+        h2{
+            font-weight: 300;
+            font-size: 1.875rem;
+            line-height: 1.15;
+            color: $darkBlue;
+        }
+
+        p{
+            line-height: 1;
+        }
     }
  }
 
