Finished the body and started work on the footer

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
         <header class="header">
             <div class ="overlay has-fade"></div>
 
-            <nav class="flex container flex-jc-sb flex-ai-c">
+            <nav class="flex container container--paddingAll flex-jc-sb flex-ai-c">
                 <h1 class = "header__logo">CSCB532</h1>
 
                 <a id= "btnHamburger" href="#" class = "header__toggle hide-for-desktop" >
@@ -26,11 +26,11 @@
                     <a href="#">Delivery</a>
                 </div>
 
-                <a href="#" class = "button header__sinlogout hide-for-mobile">Sing up / Log in</a>
+                <a href="#" class = "button t hide-for-mobile">Sing up / Log in</a>
             </nav>
 
             <div class="header__menu has-fade">
-                <a href="" class="button header__sinlogout ">Sing in/Log in</a>
+                <a href="" class="button ">Sing in/Log in</a>
                 <a href="" class="pages">Home</a>
                 <a href="" class="pages">About us</a>
                 <a href="" class="pages">Delivery</a>
@@ -42,13 +42,42 @@
 
             </div>
             
-            <div class="hero__text">
+            <div class="hero__text container--paddingAll">
                 <h2>New generation of trading, 
                     transporting and selling your belongings!</h2>
                     <p>Make your first shipment on us.</p>
                     <a href="#" class ="button">Shipment</a>
             </div>
         </section>
+
+
+
+        <footer class="footer">
+            <h1 class = "footer__logo">CSCB532</h1>
+
+            <div class="footer__social">
+                <a href="#">
+                    <img src="/app/templates/images/logo-facebookpng-32255.png" alt="Facebook">
+                </a>
+                <a href="#">
+                    <img src="/app/templates/images/logo-ig-png-32457.png" alt="Instagram">
+                </a>
+                <a href="#">
+                    <img src="/app/templates/images/logo-twitter-png-40407.png" alt="Twitter">
+                </a>
+            </div>
+
+            <div class="footer__links">
+                <a href="#">Funds</a>
+                <a href="#">Support</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+            
+            <div class="footer__cta">
+                <a href="#" class="button">Sing up/Log in</a>
+            </div>
+
+        </footer>
 
         <script src = "scssAndJs/js/script.js"></script>
     </body>
