--- a/app/templates/scssAndJs/scss/_globals.scss
+++ b/app/templates/scssAndJs/scss/_globals.scss
@@ -20,16 +20,59 @@ a, a:visited, a:hover{
 
 //Buttons
 button, .button{
+    display: inline-block;
     padding: 6px;
     border-radius: 50px;
     background: linear-gradient(to right,$limeGreen,$brightCyan);
     color: $white;
+    font-weight: 400;
+    font-size: 1rem;
     cursor: pointer;
+    transition: opacity 300ms ease-in-out;
+
+    &:hover{
+        opacity: 0.75;
+    }
+}
+
+h2{
+    margin-top: 0px;
 }
 
 .container{
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    max-width: 69.375rem;
+    margin: 0 auto;
+
+    &--paddingAll{
+        padding-top: 2.25rem;
+        padding-bottom: 2.25rem;
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
+    }
+
+    &--paddingY{
+        padding-top: 2.25rem;
+        padding-bottom: 2.25rem;
+    }
+
+    &--paddingX{
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
+    }
+
+    &--paddingTop{
+        padding-top: 2.25rem;
+    }
+    &--paddingRight{
+        padding-right: 1.5rem;
+    }
+    &--paddingBottom{
+        padding-bottom: 2.25rem;
+    }
+    &--paddingLeft{
+        padding-left: 1.5rem;
+    }
+    
 }
 
 .flex{
