--- a/app/templates/scssAndJs/scss/_variables.scss
+++ b/app/templates/scssAndJs/scss/_variables.scss
@@ -4,6 +4,7 @@ $limeGreen: hsl(136, 65%, 51%);
 $brightCyan: hsl(192, 70%, 51%);
 $grayishBlue:hsl(233, 8%, 62%);
 $bannanaYellow: hsl(49, 99%, 61%);
+$veryLightGrey: hsl(0, 0%,95.69%);
 $white: hsl(0, 0%, 100%);
 //Font sizes
 $font-sm: 0.875rem; //14px
