--- a/app/templates/scssAndJs/scss/_footer.scss
+++ b/app/templates/scssAndJs/scss/_footer.scss
@@ -14,12 +14,29 @@
         
     }
 
+    @include breakpoint-up(large){
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(1);
+        grid-template-areas: 
+        "logo links cta";
+        justify-items: start;
+    }
+
     &__logo{
         margin-top: 0px;
         margin-bottom: 1.375rem;
+        @include breakpoint-up(large){
+            grid-area: logo;
+        }
     }
 
     &__social{
+        // @include breakpoint-up(large){
+        //     grid-area: logo;
+        //     justify-self:last baseline;
+            
+        // }
         margin-bottom: 1.375rem;
         display: inline-block;
         a:not(:last-child){
@@ -37,9 +54,17 @@
         a{
             line-height: 2;
         }
+        @include breakpoint-up(large){
+            align-items: start;
+            grid-area: links;
+        }
     }
 
     &__cta{
         margin-bottom: 1.375rem;
+        @include breakpoint-up(large){
+            grid-area: cta;
+            
+        }
     }
 }
