--- a/app/templates/scssAndJs/scss/_footer.scss
+++ b/app/templates/scssAndJs/scss/_footer.scss
@@ -25,7 +25,12 @@
 
     &__logo{
         margin-top: 0px;
-        margin-bottom: 1.375rem;
+        
+
+        @include breakpoint-down(medium){
+            margin-bottom: 1.375rem;
+        }
+
         @include breakpoint-up(large){
             grid-area: logo;
         }
@@ -37,7 +42,9 @@
         //     justify-self:last baseline;
             
         // }
-        margin-bottom: 1.375rem;
+        @include breakpoint-down(medium){
+            margin-bottom: 1.375rem;
+        }
         display: inline-block;
         a:not(:last-child){
             
@@ -47,13 +54,17 @@
     }
 
     &__links{
-        margin-bottom: 1.375rem;
         display: flex;
         flex-direction: column;
         align-items: center;
         a{
             line-height: 2;
         }
+
+        @include breakpoint-down(medium){
+            margin-bottom: 1.375rem;
+        }
+
         @include breakpoint-up(large){
             align-items: start;
             grid-area: links;
@@ -61,7 +72,10 @@
     }
 
     &__cta{
-        margin-bottom: 1.375rem;
+        @include breakpoint-down(medium){
+            margin-bottom: 1.375rem;
+        }
+
         @include breakpoint-up(large){
             grid-area: cta;
             
