--- a/app/templates/scssAndJs/scss/style.css
+++ b/app/templates/scssAndJs/scss/style.css
@@ -113,7 +113,7 @@ button:hover, .button:hover {
 }
 
 h2 {
-  margin-top: 0px;
+  margin: 0px;
 }
 
 .container {
@@ -402,7 +402,12 @@ h2 {
 
 .footer__logo {
   margin-top: 0px;
-  margin-bottom: 1.375rem;
+}
+
+@media (max-width: 63.9375em) {
+  .footer__logo {
+    margin-bottom: 1.375rem;
+  }
 }
 
 @media (min-width: 64em) {
@@ -412,8 +417,13 @@ h2 {
 }
 
 .footer__social {
-  margin-bottom: 1.375rem;
   display: inline-block;
+}
+
+@media (max-width: 63.9375em) {
+  .footer__social {
+    margin-bottom: 1.375rem;
+  }
 }
 
 .footer__social a:not(:last-child) {
@@ -421,7 +431,6 @@ h2 {
 }
 
 .footer__links {
-  margin-bottom: 1.375rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -438,6 +447,12 @@ h2 {
   line-height: 2;
 }
 
+@media (max-width: 63.9375em) {
+  .footer__links {
+    margin-bottom: 1.375rem;
+  }
+}
+
 @media (min-width: 64em) {
   .footer__links {
     -webkit-box-align: start;
@@ -447,8 +462,10 @@ h2 {
   }
 }
 
-.footer__cta {
-  margin-bottom: 1.375rem;
+@media (max-width: 63.9375em) {
+  .footer__cta {
+    margin-bottom: 1.375rem;
+  }
 }
 
 @media (min-width: 64em) {
