finishing the footer

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,21 +53,9 @@
 
 
         <footer class="footer">
+
+
             <h1 class = "footer__logo">CSCB532</h1>
-
-            <div class="footer__links">
-                <a href="#">Funds</a>
-                <a href="#">Support</a>
-                <a href="#">Privacy Policy</a>
-            </div>
-
-
-
-           
-            
-            <div class="footer__cta">
-                <a href="#" class="button">Sing up/Log in</a>
-            </div>
 
 
             <div class="footer__social">
@@ -81,6 +69,23 @@
                     <img src="/app/templates/images/logo-twitter-png-40407.png" alt="Twitter">
                 </a>
             </div>
+
+            <div class="footer__links">
+                <a href="#">Funds</a>
+                <a href="#">Support</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+
+            <div class="footer__cta">
+                <a href="#" class="button">Sing up/Log in</a>
+               
+                <div class="footer__copyright">
+                    &copy; CSCB532.All Rigths Reserved.
+                </div>
+            </div>
+
+            
+
 
         </footer>
 
