--- a/app/templates/scssAndJs/scss/_footer.scss
+++ b/app/templates/scssAndJs/scss/_footer.scss
@@ -16,10 +16,11 @@
 
     @include breakpoint-up(large){
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(1);
+        grid-template-columns: repeat(2, 1fr) 2fr;
+        grid-template-rows: 1fr auto;
         grid-template-areas: 
-        "logo links cta";
+        "logo links cta"
+        "social links cta";
         justify-items: start;
     }
 
@@ -37,13 +38,12 @@
     }
 
     &__social{
-        // @include breakpoint-up(large){
-        //     grid-area: logo;
-        //     justify-self:last baseline;
-            
-        // }
+       
         @include breakpoint-down(medium){
             margin-bottom: 1.375rem;
+        }
+        @include breakpoint-up(large){
+            grid-area: social;
         }
         display: inline-block;
         a:not(:last-child){
@@ -61,12 +61,13 @@
             line-height: 2;
         }
 
-        @include breakpoint-down(medium){
-            margin-bottom: 1.375rem;
-        }
+        // @include breakpoint-down(medium){
+        //     margin-bottom: 1.375rem;
+        // }
 
         @include breakpoint-up(large){
             align-items: start;
+            justify-content: space-between;
             grid-area: links;
         }
     }
@@ -80,5 +81,11 @@
             grid-area: cta;
             
         }
+
+        
+    }
+
+    &__copyright{
+            
     }
 }
