--- a/app/templates/scssAndJs/scss/style.css
+++ b/app/templates/scssAndJs/scss/style.css
@@ -391,11 +391,11 @@ h2 {
   .footer {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-    -ms-grid-rows: ()[1];
-        grid-template-rows: repeat(1);
-        grid-template-areas: "logo links cta";
+    -ms-grid-columns: (1fr)[2] 2fr;
+        grid-template-columns: repeat(2, 1fr) 2fr;
+    -ms-grid-rows: 1fr auto;
+        grid-template-rows: 1fr auto;
+        grid-template-areas: "logo links cta" "social links cta";
     justify-items: start;
   }
 }
@@ -426,6 +426,12 @@ h2 {
   }
 }
 
+@media (min-width: 64em) {
+  .footer__social {
+    grid-area: social;
+  }
+}
+
 .footer__social a:not(:last-child) {
   margin-right: 1rem;
 }
@@ -447,17 +453,14 @@ h2 {
   line-height: 2;
 }
 
-@media (max-width: 63.9375em) {
-  .footer__links {
-    margin-bottom: 1.375rem;
-  }
-}
-
 @media (min-width: 64em) {
   .footer__links {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     grid-area: links;
   }
 }
