--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -22,7 +22,7 @@
 
                 <div class="header__links hide-for-mobile">
                     <a href="index.html">Home</a>
-                    <a href="profile.html">My profile</a>
+                    <a href="#">My profile</a>
                     <a href="#">Delivery</a>
                 </div>
 
@@ -37,17 +37,14 @@
             </div>
         </header>
 
-        <section class="hero">
-            <div class ="hero__image">
-
-            </div>
-            
-            <div class="hero__text container--paddingAll">
-                <h2>New generation of trading, 
-                    transporting and selling your belongings!</h2>
-                    <p>Make your first shipment on us.</p>
-                    <a href="#" class ="button">Shipment</a>
-            </div>
+        <section class="profile">
+            <div class="profile__menu">
+                <a href="#">My Profile</a>
+                <a href="#">My packages</a>
+                <a href="#">My addresses</a>
+                <a href="#">Tracking</a>
+                <a href="#">Settings</a>
+           
         </section>
 
 
