--- a/app/templates/scssAndJs/scss/_footer.scss
+++ b/app/templates/scssAndJs/scss/_footer.scss
@@ -16,11 +16,11 @@
 
     @include breakpoint-up(large){
         display: grid;
-        grid-template-columns: repeat(2, 1fr) 2fr;
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr auto;
         grid-template-areas: 
-        "logo links cta"
-        "social links cta";
+            "logo links cta"
+            "social links copyright";
         justify-items: start;
     }
 
@@ -44,6 +44,7 @@
         }
         @include breakpoint-up(large){
             grid-area: social;
+            align-self: end;
         }
         display: inline-block;
         a:not(:last-child){
@@ -57,8 +58,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        font-size: 1rem;
         a{
             line-height: 2;
+            transition: color 150ms ease-in-out;
+            &:hover{
+                color: $limeGreen;
+            }
         }
 
         // @include breakpoint-down(medium){
@@ -73,12 +79,14 @@
     }
 
     &__cta{
-        @include breakpoint-down(medium){
-            margin-bottom: 1.375rem;
-        }
+        // @include breakpoint-down(medium){
+        //     margin-bottom: 1.375rem;
+        // }
 
         @include breakpoint-up(large){
             grid-area: cta;
+            text-align: right;
+            justify-self: end;
             
         }
 
@@ -86,6 +94,12 @@
     }
 
     &__copyright{
-            
+        font-size: 0.85rem;
+        color: $grayishBlue;
+            @include breakpoint-up(large){
+                grid-area: copyright;
+                align-self: end;
+                justify-self: end;
+            }
     }
 }
