--- a/app/templates/scssAndJs/scss/style.css
+++ b/app/templates/scssAndJs/scss/style.css
@@ -391,11 +391,11 @@ h2 {
   .footer {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[2] 2fr;
-        grid-template-columns: repeat(2, 1fr) 2fr;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
     -ms-grid-rows: 1fr auto;
         grid-template-rows: 1fr auto;
-        grid-template-areas: "logo links cta" "social links cta";
+        grid-template-areas: "logo links cta" "social links copyright";
     justify-items: start;
   }
 }
@@ -429,6 +429,9 @@ h2 {
 @media (min-width: 64em) {
   .footer__social {
     grid-area: social;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
   }
 }
 
@@ -447,10 +450,17 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 1rem;
 }
 
 .footer__links a {
   line-height: 2;
+  -webkit-transition: color 150ms ease-in-out;
+  transition: color 150ms ease-in-out;
+}
+
+.footer__links a:hover {
+  color: #31d35c;
 }
 
 @media (min-width: 64em) {
@@ -465,15 +475,61 @@ h2 {
   }
 }
 
-@media (max-width: 63.9375em) {
-  .footer__cta {
-    margin-bottom: 1.375rem;
-  }
-}
-
 @media (min-width: 64em) {
   .footer__cta {
     grid-area: cta;
+    text-align: right;
+    -ms-grid-column-align: end;
+        justify-self: end;
   }
+}
+
+.footer__copyright {
+  font-size: 0.85rem;
+  color: #9698a6;
+}
+
+@media (min-width: 64em) {
+  .footer__copyright {
+    grid-area: copyright;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
+    -ms-grid-column-align: end;
+        justify-self: end;
+  }
+}
+
+.profile {
+  background-color: #f4f4f4;
+}
+
+.profile__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.profile__menu a {
+  color: #2d314d;
+  font-size: 1.5rem;
+  -webkit-transition: color 150ms ease-in-out;
+  transition: color 150ms ease-in-out;
+}
+
+.profile__menu a:not(:last-child) {
+  margin-bottom: 2.5rem;
+}
+
+.profile__menu a:last-child {
+  margin-bottom: 8.75rem;
+}
+
+.profile__menu a:hover {
+  color: #31d35c;
 }
 /*# sourceMappingURL=style.css.map */
