Working on the table

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -45,6 +45,15 @@
                 <a href="#">My addresses</a>
                 <a href="#">Tracking</a>
                 <a href="#">Settings</a>
+            </div>
+            
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Weight</th>
+                    <th>Date</th>
+                </tr>
+            </table>
            
         </section>
 
