--- a/app/static/scssAndJs/scss/_hero.scss
+++ b/app/static/scssAndJs/scss/_hero.scss
@@ -11,7 +11,7 @@
 
     &__image{
         position: relative;
-        background-image: url('/app/templates/images/—Pngtree—delivery\ service\ with\ maps\ on_5367224.png');
+        background-image: url("/static/images/—Pngtree—delivery\ service\ with\ maps\ on_5367224.png");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
