--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="scssAndJs/scss/style.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='scssAndJs/scss/style.css') }}">
         <!-- Index не е говорящо. - Ани -->
         <title>Home</title>
     </head>
@@ -61,13 +61,13 @@
 
             <div class="footer__social">
                 <a href="#">
-                    <img src="/app/templates/images/logo-facebookpng-32255.png" alt="Facebook">
+                    <img src="{{ url_for('static', filename='images/logo-facebookpng-32255.png') }}" alt="Facebook">
                 </a>
                 <a href="#">
-                    <img src="/app/templates/images/logo-ig-png-32457.png" alt="Instagram">
+                    <img src="{{ url_for('static', filename='images/logo-ig-png-32457.png') }}" alt="Instagram">
                 </a>
                 <a href="#">
-                    <img src="/app/templates/images/logo-twitter-png-40407.png" alt="Twitter">
+                    <img src="{{ url_for('static', filename='images/logo-twitter-png-40407.png') }}" alt="Twitter">
                 </a>
             </div>
 
@@ -89,6 +89,6 @@
 
         </footer>
 
-        <script src = "scssAndJs/js/script.js"></script>
+        <script src = "{{ url_for('static', filename='scssAndJs/js/script.js') }}"></script>
     </body>
 </html>
