--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -39,15 +39,40 @@
         </header>
 
         <section class="profile">
+
             <div class="profile__menu">
-                <a href="#">My Profile</a>
                 <a href="#">My packages</a>
                 <a href="#">My addresses</a>
                 <a href="#">Tracking</a>
                 <a href="#">Settings</a>
             </div>
             
-            
+         <table class="profile__table">
+             <tr>
+                 <th>Id</th>
+                 <th>Addresses</th>
+                 <th>Sender/Receiver</th>
+                 <th>Weight</th>
+                 <th>Price</th>
+                 <th>Status</th>
+             </tr>
+             <tr>
+                 <td>1</td>
+                 <td>From point a to point b</td>
+                 <td>Gosho/Pesho</td>
+                 <td>3kg.</td>
+                 <td>5lv.</td>
+                 <td>arrived</td>
+             </tr>
+             <tr>
+                <td>2</td>
+                <td>From point a to point b</td>
+                <td>Sasho/Tosho</td>
+                <td>10kg.</td>
+                <td>15lv.</td>
+                <td>not arrived</td>
+            </tr>
+         </table>
            
         </section>
 
