--- a/app/templates/scssAndJs/scss/_profile.scss
+++ b/app/templates/scssAndJs/scss/_profile.scss
@@ -1,5 +1,8 @@
 .profile{
+    display: flex;
     background-color: $veryLightGrey;
+    
+    
     &__menu{
         width: 180px;
         display: flex;
@@ -27,6 +30,20 @@
             &:hover{
                 color:$limeGreen;
             }
+        }
+    }
+
+    &__table{
+        
+        flex-grow: 2;
+        background: $white;
+        
+        height: 300px;
+        margin:60px 60px 60px 60px;
+
+        th{
+            text-align: left;
+            text-transform: uppercase;
         }
     }
 
