--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -47,33 +47,51 @@
                 <a href="#">Settings</a>
             </div>
             
-         <table class="profile__table">
-             <tr>
-                 <th>Id</th>
-                 <th>Addresses</th>
-                 <th>Sender/Receiver</th>
-                 <th>Weight</th>
-                 <th>Price</th>
-                 <th>Status</th>
-             </tr>
-             <tr>
-                 <td>1</td>
-                 <td>From point a to point b</td>
-                 <td>Gosho/Pesho</td>
-                 <td>3kg.</td>
-                 <td>5lv.</td>
-                 <td>arrived</td>
-             </tr>
-             <tr>
-                <td>2</td>
-                <td>From point a to point b</td>
-                <td>Sasho/Tosho</td>
-                <td>10kg.</td>
-                <td>15lv.</td>
-                <td>not arrived</td>
-            </tr>
-         </table>
            
+                <table class="profile__table">
+                    <tr class = "tbhead">
+                        <th>Id</th>
+                        <th>Addresses</th>
+                        <th>Sender/Receiver</th>
+                        <th>Weight</th>
+                        <th>Price</th>
+                        <th>Status</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>From point a to point b</td>
+                        <td>Gosho/Pesho</td>
+                        <td>3kg.</td>
+                        <td>5lv.</td>
+                        <td>arrived</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>From point a to point b</td>
+                        <td>Sasho/Tosho</td>
+                        <td>10kg.</td>
+                        <td>15lv.</td>
+                        <td>not arrived</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>From point a to point b</td>
+                        <td>Sasho/Tosho</td>
+                        <td>10kg.</td>
+                        <td>15lv.</td>
+                        <td>not arrived</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>From point a to point b</td>
+                        <td>Sasho/Tosho</td>
+                        <td>10kg.</td>
+                        <td>15lv.</td>
+                        <td>not arrived</td>
+                    </tr>
+                </table>
+            
+
         </section>
 
 
