--- a/app/templates/scssAndJs/scss/_profile.scss
+++ b/app/templates/scssAndJs/scss/_profile.scss
@@ -10,6 +10,7 @@
         border-right: 2px solid $darkBlue;
         
         
+        
         a{
             color: $darkBlue;
             font-size: 1.5rem;
@@ -36,14 +37,40 @@
     &__table{
         
         flex-grow: 2;
-        background: $white;
-        
-        height: 300px;
-        margin:60px 60px 60px 60px;
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       
+        tbody{
+            background: $white;
+            border-collapse: collapse;
+            box-shadow: 0 5px 10px $darkBlue;
+            
+        }
+        .tbhead{
+            box-shadow: 0 5px 10px $darkBlue;
+        }
+       
         th{
-            text-align: left;
+            padding: 1rem 2rem;
             text-transform: uppercase;
+            letter-spacing: 0.1rem;
+            font-size: 0.9rem;
+            
+        }
+
+        td{
+            padding: 1rem 2rem;
+        }
+
+        tr{
+            &:nth-child(odd){
+                background-color: $grayishBlue;
+            }
+
+            &:first-child{
+                background-color: $white;
+            }
         }
     }
 
