--- a/app/templates/prototype/employees.html
+++ b/app/templates/prototype/employees.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
-{% include 'header.html' %}
+{% extends 'prototype/base.html' %}
+{% include 'prototype/header.html' %}
 
 
 
