--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -5,7 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ url_for('static', filename='scssAndJs/scss/style.css') }}">
-        <!-- Index не е говорящо. - Ани -->
         <title>Profile</title>
     </head>
     <body>
@@ -39,22 +38,59 @@
         </header>
 
         <section class="profile">
+
             <div class="profile__menu">
-                <a href="#">My Profile</a>
                 <a href="#">My packages</a>
                 <a href="#">My addresses</a>
                 <a href="#">Tracking</a>
                 <a href="#">Settings</a>
             </div>
             
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>Weight</th>
-                    <th>Date</th>
-                </tr>
-            </table>
            
+                <table class="profile__table">
+                    <tr class = "tbhead">
+                        <th>Id</th>
+                        <th>Addresses</th>
+                        <th>Sender/Receiver</th>
+                        <th>Weight</th>
+                        <th>Price</th>
+                        <th>Status</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>From point a to point b</td>
+                        <td>Gosho/Pesho</td>
+                        <td>3kg.</td>
+                        <td>5lv.</td>
+                        <td>arrived</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>From point a to point b</td>
+                        <td>Sasho/Tosho</td>
+                        <td>10kg.</td>
+                        <td>15lv.</td>
+                        <td>not arrived</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>From point a to point b</td>
+                        <td>Sasho/Tosho</td>
+                        <td>10kg.</td>
+                        <td>15lv.</td>
+                        <td>not arrived</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>From point a to point b</td>
+                        <td>Sasho/Tosho</td>
+                        <td>10kg.</td>
+                        <td>15lv.</td>
+                        <td>not arrived</td>
+                    </tr>
+                </table>
+            
+
         </section>
 
 
